@@ -8,6 +8,7 @@ Version 1.3.4+svn:
  * user interface:
    * allow unfocused widgets to steal the focus instead of just borrowing it
    * frequency of idle animations halved.
+   * Help topics for units now have 'advances from' links
 
 Version 1.3.4:
  * campaigns
